# git-sync-filtered

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  python_ci.yaml  sync.yaml
docs/: IDEMPOTENCY_REMEDIATION.md
git_sync_filtered/: __main__.py  cli.py  lock.py  marker.py  sync.py  verify.py
tests/: test_basic.py
tests/integration/: conftest.py  test_filter_repo.py  test_idempotency.py  test_lock.py  test_main.py  test_sync.py  test_verify.py
tests/unit/: test_collect_paths.py  test_commit_marker.py  test_merge_into_main.py  test_push_to_remote.py  test_run_filter_repo.py  test_sync_lock.py  test_verify_sync_integrity.py
