[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-sync-filtered"
version = "0.1.1"
description = "Sync filtered commits from private to public repository"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["git", "filter", "sync", "repo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = ["click>=8.0", "gitpython>=3.1", "git-filter-repo>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
git-sync-filtered = "git_sync_filtered.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["git_sync_filtered*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"

[dependency-groups]
dev = ["pytest>=9.0.2"]
